文章搜索算法更新及搜索结果关键词高亮显示
- 文章搜索算法更新，目前只能按文章标题搜索，搜索词可包含多个关键词
- 高亮显示搜索结果关键词，使结果更加醒目

--- a/app/themes/imtx/static/css/style.css
+++ b/app/themes/imtx/static/css/style.css
@@ -310,6 +310,7 @@ li.month {
 	color:#87c71f;
 	text-decoration:none
 }
+.keyword em {font-style:normal; color:#ff0000;}
 .postmeta {
 	color:#609509;
 	list-style-type:none;
