--- a/app/themes/imtx/static/mobile/css/style.css
+++ b/app/themes/imtx/static/mobile/css/style.css
@@ -32,4 +32,5 @@ pre{background:#F3F7F7;border-left:5px solid #D9F8F8;}
 table{border-collapse:collapse;}
 input[type="submit"]{font-size:1.2em;}textarea{height:60%;}
 img{max-width:88%;}
-/*last-modified: 2014-08-11*/
+.keyword em {font-style:normal; color:#ff0000;}
+/*last-modified: 2014-08-17*/
