--- a/app/themes/imtx/templates/tags.html
+++ b/app/themes/imtx/templates/tags.html
@@ -10,13 +10,39 @@
 
 {% block main %}
 <div class="post">
+
+  <h2 class="">栏目</h2>
+  <div class="entry">
+    {% set filters_1 = [{'name': 'parent', 'op': 'is_null'}] %}
+    {% set order_by_1 = [{'field': 'longslug', 'direction': 'asc'}] -%}
+
+    {% with categories = model_query(
+        Category,
+        dict(filters=filters_1, order_by=order_by_1)
+    ) -%}
+    <ul class="taglist clearfix">
+    {% for category in categories -%}
+    <li><a href="{{ category.link }}">{{ category.name }}</a>{% if not loop.last %}&nbsp;&nbsp;{% endif %}</li>
+    {%- endfor %}
+    </ul>
+    {% endwith %}
+  </div>
+
   <h2 class="">标签</h2>
   <div class="entry">
+    {% set filters_2 = [] %}
+    {% set order_by_2 = [{'field': 'id', 'direction': 'desc'}] -%}
+
+    {% with tags = model_query(
+        Tag,
+        dict(filters=filters_2, order_by=order_by_2)
+    ) -%}
     <ul class="taglist clearfix">
-    {% for tag in tag_lists() -%}
+    {% for tag in tags -%}
     <li><a href="{{ tag.link }}">{{ tag.name }}</a>({{ tag.count }}){% if not loop.last %}&nbsp;&nbsp;{% endif %}</li>
     {%- endfor %}
     </ul>
+    {% endwith %}
   </div>
 </div>
 {% endblock %}
