--- a/app/themes/imtx/templates/index.html
+++ b/app/themes/imtx/templates/index.html
@@ -17,13 +17,21 @@
 
 
 {% block friendlinks %}
-  {% if friendlinks() %}
-    <!-- Friend Links -->
-    <h2>Links</h2>
-    <ul>
-      {% for flink in friendlinks() %}
-      <li><a href="{{ flink.url }}" title="{{ flink.title }}" target="_blank">{{ flink.anchor }}</a></li>
-      {% endfor %}
-    </ul>
-  {% endif %}
+
+{% set filters = [{'name': 'actived', 'op': 'eq', 'val': True}] -%}
+{% set order_by = [{'field': 'id', 'direction': 'desc'}] -%}
+
+{% set friendlinks = model_query(
+    FriendLink,
+    dict(filters=filters, order_by=order_by, limit=15)
+) -%}
+
+{% if friendlinks %}
+<h2>Links</h2>
+<ul>
+  {% for flink in friendlinks -%}
+  <li><a href="{{ flink.url }}" title="{{ flink.title }}" target="_blank">{{ flink.anchor }}</a></li>
+  {% endfor %}
+</ul>
+{% endif %}
 {% endblock %}
