--- a/app/themes/imtx/templates/mobile/topics.html
+++ b/app/themes/imtx/templates/mobile/topics.html
@@ -9,11 +9,19 @@
 {% block main %}
   <h2 class="t1"><b>专题</b></h2>
   <div class="entry">
+    {% set filters = [] %}
+    {% set order_by = [{'field': 'id', 'direction': 'desc'}] -%}
+
+    {% with topics = model_query(
+        Topic,
+        dict(filters=filters, order_by=order_by)
+    ) -%}
     <ul class="taglist clearfix">
-      {% for topic in topic_lists() -%}
+      {% for topic in topics -%}
       <li><a href="{{ topic.link }}">{{ topic.name }}</a>{% if not loop.last %}&nbsp;&nbsp;{% endif %}</li>
       {%- endfor %}
     </ul>
+    {% endwith %}
   </div>
 {% endblock %}
 
