使用新增的环境处理器重新改写模板，并增加菜单高亮显示功能

--- a/app/themes/imtx/templates/flatpage.html
+++ b/app/themes/imtx/templates/flatpage.html
@@ -1,4 +1,7 @@
 {% extends theme('layout.html') %}
+{% if flatpage.slug == 'about' %}
+  {% set active_page = "about" %}
+{% endif %}
 
 {% block title %}{{ flatpage.seotitle or flatpage.title }}{% endblock %}
 
