--- a/app/themes/imtx/templates/topics.html
+++ b/app/themes/imtx/templates/topics.html
@@ -1,4 +1,5 @@
 {% extends theme('layout.html') %}
+{% set active_page = "topics" %}
 
 {% block title %}专题{% endblock %}
 
@@ -12,13 +13,7 @@
 <div class="post">
   <h2 class="">专题</h2>
   <div class="entry">
-    {% set filters = [] %}
-    {% set order_by = [{'field': 'id', 'direction': 'desc'}] -%}
-
-    {% with topics = model_query(
-        Topic,
-        dict(filters=filters, order_by=order_by)
-    ) -%}
+    {% with topics = topic_lists() %}
     <ul class="clearfix">
     {% for topic in topics -%}
     <li><a href="{{ topic.link }}">{{ topic.name }}</a></li>
