--- a/app/themes/imtx/templates/mobile/tags.html
+++ b/app/themes/imtx/templates/mobile/tags.html
@@ -7,20 +7,29 @@
 {%- endblock %}
 
 {% block main %}
-  <h2 class="t1"><b>标签</b></h2>
+  <h2 class="t1"><b>栏目</b></h2>
   <div class="entry">
-    {% set filters_2 = [] %}
-    {% set order_by_2 = [{'field': 'id', 'direction': 'desc'}] -%}
-
-    {% with tags = model_query(
-        Tag,
-        dict(filters=filters_2, order_by=order_by_2)
-    ) -%}
+    {% with categories = category_lists() %}
+    {% if categories %}
     <ul class="taglist clearfix">
-      {% for tag in tags -%}
-      <li><a href="{{ tag.link }}">{{ tag.name }}</a>({{ tag.count }}){% if not loop.last %}&nbsp;&nbsp;{% endif %}</li>
+      {%- for category in categories %}
+      <li><a href="{{ category.link }}">{{ category.name }}</a></li>
       {%- endfor %}
     </ul>
+    {% endif %}
+    {% endwith %}
+  </div>
+
+  <h2 class="t1"><b>标签</b></h2>
+  <div class="entry">
+    {% with tags = tag_lists() %}
+    {% if tags %}
+    <ul class="taglist clearfix">
+      {%- for tag in tags %}
+      <li><a href="{{ tag.link }}">{{ tag.name }}</a>({{ tag.count }})</li>
+      {%- endfor %}
+    </ul>
+    {% endif %}
     {% endwith %}
   </div>
 {% endblock %}
