--- a/app/themes/imtx/templates/topic.html
+++ b/app/themes/imtx/templates/topic.html
@@ -1,4 +1,5 @@
 {% extends theme('layout.html') %}
+{% set active_page = "topics" %}
 
 {% block title %}{{ topic.seotitle or topic.name }}{% if pagination.page>1 %}_第{{ pagination.page }}页{% endif %}{% endblock %}
 {% block keywords %}{{ topic.seokey }}{% endblock %}
