用户登陆界面：增加后退和返回首页按钮

--- a/wtxlog/themes/imtx/templates/account/base.html
+++ b/wtxlog/themes/imtx/templates/account/base.html
@@ -8,5 +8,6 @@
     {% endfor %}
   </ul>
 {% block body %}{% endblock %}
+<p><a href="javascript:window.history.back();">Back</a> | <a href="{{ url_for('main.index') }}">Back Index</a></p>
 </body>
 </html>
