分页URL静态化及行末空格清理
分页时把页码写入URL，而不再使用查询参数方式，有利于URL静态化及SEO

--- a/wtxlog/themes/imtx/templates/index.html
+++ b/wtxlog/themes/imtx/templates/index.html
@@ -6,9 +6,9 @@
 {% block author %}{{ config['SITE_NAME'] }}{% endblock %}
 
 {% block head_extend -%}
-  <link rel="canonical" href="{{ url_for('main.index', _external=True) }}" />
-  <meta name="mobile-agent" content="format=html5;url={{ url_for('main.index', _external=True) }}"/>
-  <meta name="mobile-agent" content="format=xhtml;url={{ url_for('main.index', _external=True) }}"/>
+  <link rel="canonical" href="{{ request.base_url }}" />
+  <meta name="mobile-agent" content="format=html5;url={{ request.base_url }}"/>
+  <meta name="mobile-agent" content="format=xhtml;url={{ request.base_url }}"/>
 {%- endblock %}
 
 {% block main %}
