--- a/wtxlog/themes/imtx/templates/mobile/archives.html
+++ b/wtxlog/themes/imtx/templates/mobile/archives.html
@@ -3,7 +3,7 @@
 {% block title %}Monthly Archives: {{ year }}-{{ month }}{% if pagination.page>1 %}_第{{ pagination.page }}页{% endif %}{% endblock %}
 
 {% block head_extend -%}
-  <link rel="canonical" href="{{ url_for('main.archives', year=year, month=month, _external=True) }}" />
+  <link rel="canonical" href="{{ request.base_url }}" />
 {%- endblock %}
 
 {% block main %}
