--- a/wtxlog/themes/imtx/templates/category.html
+++ b/wtxlog/themes/imtx/templates/category.html
@@ -5,9 +5,9 @@
 {% block description %}{{ category.seodesc }}{% endblock %}
 
 {% block head_extend -%}
-  <link rel="canonical" href="{{ category.link }}" />
-  <meta name="mobile-agent" content="format=html5;url={{ category.link }}"/>
-  <meta name="mobile-agent" content="format=xhtml;url={{ category.link }}"/>
+  <link rel="canonical" href="{{ request.base_url }}" />
+  <meta name="mobile-agent" content="format=html5;url={{ request.base_url }}"/>
+  <meta name="mobile-agent" content="format=xhtml;url={{ request.base_url }}"/>
 {%- endblock %}
 
 {% block main %}
