--- a/wtxlog/themes/imtx/templates/tag.html
+++ b/wtxlog/themes/imtx/templates/tag.html
@@ -6,9 +6,9 @@
 {% block description %}{{ tag.seodesc }}{% endblock %}
 
 {% block head_extend -%}
-  <link rel="canonical" href="{{ tag.link }}" />
-  <meta name="mobile-agent" content="format=html5;url={{ tag.link }}"/>
-  <meta name="mobile-agent" content="format=xhtml;url={{ tag.link }}"/>
+  <link rel="canonical" href="{{ request.base_url }}" />
+  <meta name="mobile-agent" content="format=html5;url={{ request.base_url }}"/>
+  <meta name="mobile-agent" content="format=xhtml;url={{ request.base_url }}"/>
 {%- endblock %}
 
 {% block main %}
