--- a/wtxlog/themes/imtx/templates/topics.html
+++ b/wtxlog/themes/imtx/templates/topics.html
@@ -9,6 +9,8 @@
   <meta name="mobile-agent" content="format=xhtml;url={{ url_for('main.topics', _external=True) }}"/>
 {%- endblock %}
 
+{% block crumb %}专题{% endblock %}
+
 {% block main %}
 <div class="post">
   <h2 class="">专题</h2>
