--- a/wtxlog/themes/imtx/templates/article.html
+++ b/wtxlog/themes/imtx/templates/article.html
@@ -15,15 +15,10 @@
   <div class="logo"><a class="logo-img" title="{{ config['SITE_NAME'] }}" href="{{ url_for('main.index') }}"><span class="none">{{ config['SITE_NAME'] }}</span></a></div>
 {% endblock %}
 
+{% block crumb %}{{ nav_by_category(article.category) }}<b>&#187;</b>{{ article.title }}{% endblock %}
+
 {% block main %}
-
 <div class="post" id="article-{{ article.id }}">
-  <!--location begin -->
-  <div style="margin-bottom:10px">
-    {{ nav_by_category(article.category) }} 正文
-  </div>
-  <!--location end -->
-
   <ul class="date">
     <li class="day">{{ article.created|date('%d') }}</li>
     <li class="month">{{ article.created|date('%b') }}</li>
@@ -31,7 +26,7 @@
 
   <div class="title">
     <h1 class="topic"><a href="{{ article.link }}" rel="bookmark" title="{{ article.title }}">{{ article.title }}</a></h1>
-    <p class="postmeta">Post by {{ article.author }} at {{ article.created|date('%Y') }}. 
+    <p class="postmeta">Post by {{ article.author }} at {{ article.created|date('%Y') }}.
     Category: <a href="{{ article.category.link }}">{{ article.category.name }}</a>.
     <span id="articlehits"><img src="{{ theme_static('images/loading.gif') }}" /></span> Views.</p></div>
 
