月份格式由英文缩写改为数字

--- a/wtxlog/themes/imtx/templates/article.html
+++ b/wtxlog/themes/imtx/templates/article.html
@@ -21,7 +21,7 @@
 <div class="post" id="article-{{ article.id }}">
   <ul class="date">
     <li class="day">{{ article.created|date('%d') }}</li>
-    <li class="month">{{ article.created|date('%b') }}</li>
+    <li class="month">{{ article.created|date('%m') }}月</li>
   </ul>
 
   <div class="title">
