--- a/wtxlog/themes/imtx/templates/index.html
+++ b/wtxlog/themes/imtx/templates/index.html
@@ -13,6 +13,8 @@
 
 {% block crumbwrap %}{% endblock %}
 
+{% block logo %}<h1 class="logo">{{ logo() }}</h1>{% endblock %}
+
 {% block main %}
   {% include theme('article_lists.html') %}
 {% endblock %}
