增加Archives页面面包屑导航

--- a/wtxlog/themes/imtx/templates/archives.html
+++ b/wtxlog/themes/imtx/templates/archives.html
@@ -6,6 +6,8 @@
   <link rel="canonical" href="{{ request.base_url }}" />
 {% endblock %}
 
+{% block crumb %}Monthly Archives: {{ year }}-{{ month }}{% endblock %}
+
 {% block main %}
   {% include theme('article_lists.html') %}
 {% endblock %}
