更新文章页标题：优先使用SEO标题

--- a/wtxlog/themes/imtx/templates/article.html
+++ b/wtxlog/themes/imtx/templates/article.html
@@ -1,6 +1,6 @@
 {% extends theme('layout.html') %}
 
-{% block title %}{{ article.title }}{% endblock %}
+{% block title %}{{ article.seotitle or article.title }}{% endblock %}
 
 {% block head_extend -%}
   <link href="{{ theme_static('css/highlight-default.css') }}" rel="stylesheet" type="text/css" media="all" />
