--- a/wtxlog/templates/admin/model/a_create.html
+++ b/wtxlog/templates/admin/model/a_create.html
@@ -3,22 +3,5 @@
 {% block tail %}
   {{ super() }}
 
-  {% if config['BODY_FORMAT'] == 'html' %}
-  <script src="{{ url_for('static', filename='admin/ckeditor/ckeditor.js') }}"></script>
-  {% else %}
-	<link rel="stylesheet" type="text/css" href="/static/admin/markitup/skins/markdown/style.css">
-	<!--  markItUp! toolbar skin -->
-	<link rel="stylesheet" type="text/css" href="/static/admin/markitup/sets/markdown/style.css" />
-	<!-- markItUp! -->
-	<script type="text/javascript" src="/static/admin/markitup/jquery.markitup.js"></script>
-	<!-- markItUp! toolbar settings -->
-  <script type="text/javascript" src="/static/admin/markitup/sets/markdown/ajaxfileupload.js"></script>
-	<script type="text/javascript" src="/static/admin/markitup/sets/markdown/set.js"></script>
-
-  <script language="javascript">
-  $(document).ready(function()	{
-      $('.markitup').markItUp(myMarkdownSettings);
-  });
-  </script>
-  {% endif %}
+  {% include 'admin/model/editor.html' %}
 {% endblock %}
