--- a/wtxlog/templates/admin/index.html
+++ b/wtxlog/templates/admin/index.html
@@ -7,12 +7,12 @@
     <div>
         {% if current_user.is_authenticated() %}
         <p class="lead">
-        {{ current_user.username }}, 欢迎你
+        {{ _('Howdy') }}, {{ current_user.username }}
         </p>
         {% else %}
         {% endif %}
     </div>
 
-    <a class="btn" href="/"><i class="icon-arrow-left icon-gray"></i> Back</a>
+    <a class="btn" href="/"><i class="icon-arrow-left icon-gray"></i> {{ _('Back') }}</a>
 </div>
 {% endblock body %}
