更新Flask-Admin静态文件至1.0.8版本

--- a/wtxlog/static/admin/admin/css/admin.css
+++ b/wtxlog/static/admin/admin/css/admin.css
@@ -27,13 +27,17 @@ form.search-form {
     margin: 4px 0 0 0;
 }
 
-form.search-form a.clear i {
+form.search-form .clear i {
     margin: 2px 0 0 0;
+}
+
+form.search-form div input {
+    margin: 0;
 }
 
 /* Filters */
 table.filters {
-    border-collapse: none;
+    border-collapse: collapse;
     border-spacing: 4px;
 }
 
@@ -70,12 +74,18 @@ table.filters {
 }
 
 /* Inline forms */
-.fa-inline-field {
+.inline-field {
     padding-bottom: 0.5em;
 }
 
-.fa-inline-field-control {
+.inline-field-control {
     float: right;
+}
+
+.inline-field .inline-form-field {
+    border-left: 1px solid #eeeeee;
+    padding-left: 8px;
+    margin-bottom: 4px;
 }
 
 /* Image thumbnails */
@@ -95,14 +105,11 @@ table.filters {
     margin-left: 110px;
 }
 
-/* Inline forms */
-.inline-field .inline-form {
-    border-left: 1px solid #eeeeee;
-    padding-left: 8px;
-    margin-bottom: 4px;
-}
-
 /* Patch Select2 */
 .select2-results li {
     min-height: 24px !important;
+}
+
+.list-checkbox-column {
+    width: 14px;
 }
