--- a/wtxlog/templates/admin/model/editor.html
+++ b/wtxlog/templates/admin/model/editor.html
@@ -6,13 +6,23 @@
 <div id="upload" class="uk-modal">
     <div class="uk-modal-dialog">
         <a class="uk-modal-close uk-close"></a>
-		<div id="upload-drop" class="uk-placeholder uk-text-center">
-			<i class="uk-icon-cloud-upload uk-icon-medium uk-text-muted uk-margin-small-right"></i> Attach binaries by dropping them here or <a class="uk-form-file">selecting one<input id="upload-select" type="file"></a>.
-		</div>
-		<div id="progressbar" class="uk-progress uk-hidden">
-			<div class="uk-progress-bar" style="width: 0%;">0%</div>
-		</div>
-	</div>
+        <div class="uk-modal-header"><h2>{{ _('Upload Image') }}</h2></div>
+
+        <div id="upload-drop" class="uk-placeholder uk-text-center">
+            <i class="uk-icon-cloud-upload uk-icon-medium uk-text-muted uk-margin-small-right"></i> <a class="uk-form-file">{{ _('Attach Images by dropping them here or selecting one') }}<input id="upload-select" type="file"></a>.
+        </div>
+        <div id="progressbar" class="uk-progress uk-hidden">
+            <div class="uk-progress-bar" style="width: 0%;">0%</div>
+        </div>
+
+        <div id="preview" class="uk-text-center uk-margin-small-top"></div>
+        <div class="uk-modal-footer">
+            <div class="uk-modal-footer uk-text-right">
+            <button type="button" class="uk-button uk-modal-close">{{ _('Cancel') }}</button>
+            <button type="button" class="uk-button uk-button-primary" id="btn_upload_submit">{{ _('Submit') }}</button>
+            </div>
+        </div>
+    </div>
 </div>
 
 <link rel="stylesheet" href="{{ url_for('static', filename='admin/uikit/css/uikit.min.css') }}" />
